# finalproject-ref

./: .gitignore  Dockerfile  Dockerfile.kafka  Dockerfile.terraform  README.md  create-topics.sh  dbt_project.yml  docker-compose.yaml  main.py  notebook.ipynb  pyproject.toml  requirements.txt
dags/: project_01_dag.py
models/marts/: schema.yml
models/marts/dim/: dim_carparks.sql
models/marts/fact/: fact_carpark_availability.sql
models/reporting/: rpt_carpark_hourly_trends.sql  rpt_carpark_time_category.sql  rpt_carpark_utilization.sql
models/staging/: _sources.yml  stg_carpark_availability.sql
orchestration/: Dockerfile  docker-compose.yml  requirements.txt
orchestration/dags/: lta_carpark_dag.py
processing/: docker-compose.yml  requirements.txt
processing/dataflow/: kafka_to_gcs_pipeline.py  requirements.txt
processing/schemas/: carpark_schema.json
processing/sql/: create_tables.sql
processing/src/job/: carpark_job.py
terraform/: README.md  main.tf  outputs.tf  variables.tf
